remove duplication. rename api permission